test/files/neg/qmark-deprecated.check
qmark-deprecated.scala:4: error: [quick fix available] using `?` as a type name requires backticks.
class Foo[?] // error
          ^
qmark-deprecated.scala:6: error: [quick fix available] using `?` as a type name requires backticks.
class Bar[M[?] <: List[?]] // error on the definition
            ^
qmark-deprecated.scala:10: error: [quick fix available] using `?` as a type name requires backticks.
  class ? { val x = 1 } // error
        ^
qmark-deprecated.scala:16: error: [quick fix available] using `?` as a type name requires backticks.
  trait ? // error
        ^
qmark-deprecated.scala:22: error: [quick fix available] using `?` as a type name requires backticks.
  type ? = Int // error
       ^
qmark-deprecated.scala:33: error: [quick fix available] using `?` as a type name requires backticks.
  def bar1[?] = {} // error
           ^
qmark-deprecated.scala:35: error: [quick fix available] using `?` as a type name requires backticks.
  def bar3[M[?]] = {} // error
             ^
qmark-deprecated.scala:38: error: [quick fix available] using `?` as a type name requires backticks.
  type A[?] = Int // error
         ^
8 errors
